--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Caroline Sevier GEOG 370 Homework</h1>
+    <a href="Homework 2/worldprojections.html">Homework 2</a>
     <a href="Homework 3/Worldprojections/worldprojections.html">Homework 3</a>
 </body>
 </html>
