--- a/Homework 4/tile_hw4.html
+++ b/Homework 4/tile_hw4.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([35.90566505168687, -79.05077743860433], 14.0);
-      L.tileLayer('file:////Users/carolinesevier/Desktop/GEOG%20370/Homework%204/{z}/{x}/{y}.png', {
+      L.tileLayer('./Homework_4/{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 16,
         tms: false,
