--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <a href="Homework 3/Worldprojections/worldprojections.html">Homework 3</a>
     
     <a href="file:///Users/carolinesevier/Desktop/GEOG%20370/Homework%204/tileshw4.html">Homework 4</a>
-    <a href="HW5.tileshtml.html">Homework 5</a>
+    <a href="Homework 5/HW5.tileshtml.html">Homework 5</a>
 </body>
 </html>
