--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Caroline Sevier GEOG 370 Homework</h1>
     <a href="Homework 3/Worldprojections/worldprojections.html">Homework 3</a>
     <a href="Homework 5/HW5.tileshtml.html">Homework 5</a>
+    <a href="Homework 6/hw6_template.html">Homework 6</a>
 </body>
 </html>
