--- a/Homework 6/hw6_template.html
+++ b/Homework 6/hw6_template.html
@@ -9,15 +9,15 @@
 <h1>Homework 6: Census data choropleth </h1>
 
 <!-- Your map goes here -->
-<a href="./Homework 6/HW6.png">
-    <img src="./Homework 6/HW6.png" alt="your map" width='500px'>
+<a href="./HW6.png">
+    <img src="./HW6.png" alt="your map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="./Homework 6/ACSST5Y2021.S1701_2023-03-01T185517/ACSST5Y2021.S1701-Data.csv"> CSV dataset </a>
+    <a href="./ACSST5Y2021.S1701_2023-03-01T185517/ACSST5Y2021.S1701-Data.csv"> CSV dataset </a>
     <p></p>
-    <a href="./Homework 6/la_counties_3451.shp"> Link to shapefile </a>
+    <a href="./la_counties_3451.shp"> Link to shapefile </a>
 
 </body>
 </html>
