--- a/Homework 6/hw6_template.html
+++ b/Homework 6/hw6_template.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Homework 6: Census data choropleth </h1>
-
+<h2>This map shows the number of households in Louisiana with poverty status. The data is divided by parish (county). The darker orange the county, the more households with poverty status. </h2>
 <!-- Your map goes here -->
 <a href="./html/HW6.png".png">
     <img src="./html/HW6.png" alt="your map" width='500px'>
