--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="Homework 3/Worldprojections/worldprojections.html">Homework 3</a>
     <a href="Homework 5/HW5.tileshtml.html">Homework 5</a>
     <a href="Homework 6/hw6_template.html">Homework 6</a>
+    <a href="Homework 6/hw6.2.html">Homework 6.2</a>
 </body>
 </html>
