--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <h1>Caroline Sevier GEOG 370 Homework</h1>
     <a href="Homework 3/Worldprojections/worldprojections.html">Homework 3</a>
+    <p></p>
     <a href="Homework 5/HW5.tileshtml.html">Homework 5</a>
+    <p></p>
     <a href="Homework 6/hw6_template.html">Homework 6</a>
+    <p></p>
     <a href="Homework 6/hw6.2.html">Homework 6.2</a>
+    <p></p>
+    <a href="HW7/hw7.html">Homework 7</a>
 </body>
 </html>
