--- a/HW7/hw7.html
+++ b/HW7/hw7.html
@@ -10,15 +10,15 @@
 <h2>Caroline Sevier</h2>
 <h3>This map shows the CO2 emission from transport as a precentage of the total fuel combustion. This is important because it can help to show what countries have technology that might clean emissions before releasing them into the air, because if we were to just map total fuel combustion, more industrialized countries like the US might show more emissions. This map could be used as a framework for cutting CO2 emissions or introducing cleaner technology into countries that are darker (more emissions). </h3>
 <!-- Your map goes here -->
-<a href="./HW7/Homework 7.png">
-    <img src="./HW7/Homework 7.png" alt="your map" width='500px'>
+<a href="./Homework 7.png">
+    <img src="./Homework 7.png" alt="your map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="./HW7/API_EN.CO2.TRAN.ZS_DS2_en_csv_v2_4903052/API_EN.CO2.TRAN.ZS_DS2_en_csv_v2_4903052.csv"> CSV dataset </a>
+    <a href="./API_EN.CO2.TRAN.ZS_DS2_en_csv_v2_4903052/API_EN.CO2.TRAN.ZS_DS2_en_csv_v2_4903052.csv"> CSV dataset </a>
     <p></p>
-    <a href="./GEOG 370/github respository/GEOG370/HW7/hw7.geojson"> Link to vector </a>
+    <a href="https://github.com/carojean923/GEOG370/blob/main/HW7/hw7.geojson"> Link to vector </a>
     <p></p>
     <a href="https://data.worldbank.org/indicator/EN.CO2.TRAN.ZS?view=map"> Link to CSV Source </a>
 </body>
