--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p></p>
     <a href="Homework 6/hw6.2.html">Homework 6.2</a>
     <p></p>
-    <a href="HW7/hw7.html">Homework 7</a>
+    <a href="./HW7/hw7.html">Homework 7</a>
 </body>
 </html>
