--- a/HW8/HW8.html
+++ b/HW8/HW8.html
@@ -9,8 +9,8 @@
 <h1>Homework 8 </h1>
 <h2> This map shows Louisiana's Major Urban Areas in relation to its waterways. The urban areas have two buffers, a 1 kilometer buffer and a 5 kilometer buffer, that can show the potential impact that runoff from these urban areas can have on these waterways from just day to day pollution or major storm events.  </h2>
 <!-- Your map goes here -->
-<a href="./HW 8.png".png">
-    <img src="./HW 8.png" alt="your map" width='500px'>
+<a href="./YEah/HW 8.png".png">
+    <img src="./YEah/HW 8.png" alt="your map" width='500px'>
     </a>
     <h2> In order to answer my question of how runoff from urban areas might affect Louisiana waterways, I had to create two buffers, one for a fairly typical day (1 km) and one that might represent a major storm event that would increase runoff (5 km). I also altered the transparency of each of urban area layers (original and buffer) so you can see how they compare to one another. I also had to change the projection of the original files to 3451, a Louisiana state projection. </h2>
 <!-- Link to your shapefile in Github and you CSV -->
