--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <a href="Homework 6/hw6.2.html">Homework 6.2</a>
     <p></p>
     <a href="./HW7/hw7.html">Homework 7</a>
+    <p></p>
+    <a href="./HW8/HW8.html">Homework 8</a>
 </body>
 </html>
